# enigma2-skins-sh4

./: .gitignore  CONTROL  Makefile.am  configure.ac  index.html  split-packages.py
2b/CONTROL/: control  postrm
2b/meta/: Makefile.am  skin_2b.xml
2b/src/: Makefile.am  skin.xml
2b/src/buttons/: Makefile.am
2b/src/epg/: Makefile.am
2b/src/fonts/: Makefile.am
2b/src/icons/: Makefile.am
2b/src/line/: Makefile.am
2b/src/sel/: Makefile.am
2b/src/skin_default/: Makefile.am
neutronhd/CONTROL/: control  postinstall
neutronhd/meta/: skin_neutron-hd.xml
neutronhd/po/: ru.po
neutronhd/src_plugin/: plugin.py
neutronhd/src_skin/: Makefile.am  defskin.xml  skin.xml
neutronhd/src_skin/buttons/: Makefile.am
neutronhd/src_skin/epg/: Makefile.am
neutronhd/src_skin/fonts/: Makefile.am
neutronhd/src_skin/icons/: Makefile.am
neutronhd/src_skin/menu/: Makefile.am
neutronhd/src_skin/pixmap/: Makefile.am
neutronhd/src_skin/starsbar/: Makefile.am
neutronhd/src_skin/style/: Makefile.am
sd/: Makefile.am
sd/CONTROL/: control  postrm
sd/meta/: Makefile.am  skin_sd.xml
sd/src/: Makefile.am  skin.xml
sd/src/bs1/: Makefile.am
sd/src/buttons/: Makefile.am
sd/src/icons/: Makefile.am
sd/src/menu/: Makefile.am
sd/src/skin_default/: Makefile.am
sd/src_conv/: EventNam1.pyo  Makefile.am  MoreInfo2.pyo
skins/: Makefile.am
skins/BASIC-HD/meta/: Makefile.am  skin_basic-hd.xml
skins/BrushedAlu-HD/meta/: Makefile.am  skin_brushedalu-hd.xml
skins/DMConcinnity-HD/meta/: Makefile.am  skin_dmconcinnity-hd.xml
skins/DreamMM-HD/meta/: Makefile.am  skin_dreammm-hd.xml
skins/Elgato-HD/meta/: Makefile.am  skin_elgato-hd.xml
skins/Kerni-HD1/meta/: Makefile.am  skin_kerni-hd1.xml
skins/Kerni-HD1R2/meta/: Makefile.am  skin_kerni-hd1r2.xml
skins/Nemesis.BlackBox/meta/: skin_nemesis.blackbox.xml
skins/Nemesis.Blueline.Extended/meta/: skin_nemesis.blueline.extended.xml
skins/Nemesis.Blueline.Single/meta/: skin_nemesis.blueline.single.xml
skins/Nemesis.Blueline/meta/: skin_nemesis.blueline.xml
skins/Nemesis.ChromeLine.Cobolt/meta/: skin_nemesis.chromeline.cobolt.xml
skins/Nemesis.ChromeLine/meta/: skin_nemesis.chromeline.xml
skins/Nemesis.Flatline.Blue/meta/: skin_nemesis.flatline.blue.xml
skins/Nemesis.Flatline.Picon.Blue/meta/: Makefile.am  skin_nemesis.flatline.picon.blue.xml
skins/Nemesis.Flatline.Picon.Lava/meta/: Makefile.am  skin_nemesis.flatline.picon.lava.xml
skins/Nemesis.Flatline/meta/: skin_nemesis.flatline.xml
skins/Nemesis.GlassLine/meta/: skin_nemesis.glassline.xml
skins/Nemesis.Greenline.Extended/meta/: skin_nemesis.greenline.extended.xml
skins/Nemesis.Greenline.Single/meta/: skin_nemesis.greenline.single.xml
skins/Nemesis.Greenline/meta/: skin_nemesis.greenline.xml
skins/Nemesis.Greyline.Extended/meta/: skin_nemesis.greyline.extended.xml
skins/Nemesis.Greyline.Single/meta/: skin_nemesis.greyline.single.xml
skins/Nemesis.Greyline/meta/: skin_nemesis.greyline.xml
skins/Nemesis.ShadowLine/meta/: skin_nemesis.shadowline.xml
skins/NeutronHD/: Makefile.am
skins/NeutronHD/CONTROL/: control  postrm
skins/NeutronHD/meta/: Makefile.am
skins/NeutronHD/po/: Makefile.am
skins/NeutronHD/src_plugin/: Makefile.am
skins/NeutronHD/src_skin/: Makefile.am  skin.xml
skins/SWAIN-HD/meta/: Makefile.am  skin_swain-hd.xml
skins/SWAIN/meta/: Makefile.am  skin_swain.xml
skins/UltraViolet/meta/: Makefile.am  skin_ultraviolet.xml
skins/Vali-XD/meta/: skin_vali-xd.xml
skins/Vali.HD.atlantis/meta/: skin_vali.hd.atlantis.xml
skins/Vali.HD.nano/: skin.xml
skins/Vali.HD.nano/meta/: skin_vali.hd.nano.xml
skins/Vali.HD.warp/meta/: skin_vali.hd.warp.xml
skins/YADS-HD/meta/: Makefile.am  skin_yads-hd.xml
skins/dTV-HD-Reloaded/meta/: Makefile.am  skin_dtv-hd-reloaded.xml
skins/dTV-HD/meta/: Makefile.am  skin_dtv-hd.xml
skins/dmm-HD/meta/: Makefile.am  skin_dmm-hd.xml
skins/dreamTV-HD/meta/: Makefile.am  skin_dreamtv-hd.xml
skins/neutronhd/CONTROL/: control
skins/neutronhd/meta/: skin_neutron-hd.xml
skins/neutronhd/src_plugin/: plugin.py
skins/simple/meta/: Makefile.am  skin_simple.xml
technohd/CONTROL/: control  postrm
technohd/meta/: Makefile.am  skin_techno-hd.xml
technohd/po/: Makefile.am
technohd/src_plugin/: Makefile.am
technohd/src_skin/: Makefile.am  defskin.xml  skin.xml
(+17 files in other folders)
