AC_INIT([enigma2-skins],3.0.0,[enigma2-devel@lists.elitedvb.net])
AM_INIT_AUTOMAKE([foreign])

# Silent rules are available since 1.11, but older versions
# are still in use. So don't use them unconditionally.
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
skins/Makefile
skins/NeutronHD/Makefile
skins/NeutronHD/meta/Makefile
skins/NeutronHD/po/Makefile
skins/NeutronHD/src_plugin/Makefile
skins/NeutronHD/src_skin/Makefile
skins/NeutronHD/src_skin/buttons/Makefile
skins/NeutronHD/src_skin/epg/Makefile
skins/NeutronHD/src_skin/fonts/Makefile
skins/NeutronHD/src_skin/epg/Makefile
skins/NeutronHD/src_skin/icons/Makefile
skins/NeutronHD/src_skin/menu/Makefile
skins/NeutronHD/src_skin/pixmap/Makefile
skins/NeutronHD/src_skin/starsbar/Makefile
skins/NeutronHD/src_skin/pixmap/Makefile
skins/NeutronHD/src_skin/style/Makefile
])
